Db set up and simple seed
- Db not used still dummy data

--- a/Stockery.DataAccess/App.config
+++ b/Stockery.DataAccess/App.config
@@ -6,7 +6,7 @@
   </configSections>
   <connectionStrings>
     <add name="StockDb"
-         connectionString="Data Source=.;Initial Catalog=StockDatabase Integrated Security=True"
+         connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=Stock;Integrated Security=True;"
          providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <entityFramework>
