--- a/Stockery.DataAccess/Stockery.DataAccess.csproj
+++ b/Stockery.DataAccess/Stockery.DataAccess.csproj
@@ -49,6 +49,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="Migrations\201810271358560_initDb.cs" />
+    <Compile Include="Migrations\201810271358560_initDb.Designer.cs">
+      <DependentUpon>201810271358560_initDb.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StockDbContext.cs" />
@@ -62,6 +66,11 @@
       <Project>{DE100EB5-FF86-4DD7-B84C-20E0FF47DFEF}</Project>
       <Name>Stockery.Model</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201810271358560_initDb.resx">
+      <DependentUpon>201810271358560_initDb.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
