--- a/Stockery/Stockery.UI.csproj
+++ b/Stockery/Stockery.UI.csproj
@@ -38,7 +38,14 @@
     <Reference Include="Autofac, Version=4.8.1.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
       <HintPath>..\packages\Autofac.4.8.1\lib\net45\Autofac.dll</HintPath>
     </Reference>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
@@ -104,6 +111,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Stockery.DataAccess\Stockery.DataAccess.csproj">
+      <Project>{BF3CA590-4996-4725-A44D-805C13EFBE9B}</Project>
+      <Name>Stockery.DataAccess</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Stockery.Model\Stockery.Model.csproj">
       <Project>{DE100EB5-FF86-4DD7-B84C-20E0FF47DFEF}</Project>
       <Name>Stockery.Model</Name>
