--- a/Stockery.Model/Stockery.Model.csproj
+++ b/Stockery.Model/Stockery.Model.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HistoricalStockPriceInfo.cs" />
+    <Compile Include="LookUpItem.cs" />
     <Compile Include="Stock.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
