--- a/Stockery/Stockery.UI.csproj
+++ b/Stockery/Stockery.UI.csproj
@@ -68,10 +68,11 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Data\IStockDataService.cs" />
-    <Compile Include="Data\IStockLookUpDataService.cs" />
-    <Compile Include="Data\LookUpDataService.cs" />
-    <Compile Include="Data\StockDataService.cs" />
+    <Compile Include="Data\LookUps\IStockLookUpDataService.cs" />
+    <Compile Include="Data\LookUps\LookUpDataService.cs" />
+    <Compile Include="Data\Repositories\IStockRepository.cs" />
+    <Compile Include="Data\Repositories\StockRepository.cs" />
+    <Compile Include="Event\AfterStockDeletedEvent.cs" />
     <Compile Include="Event\AfterStockSavedEvent.cs" />
     <Compile Include="Event\OpenStockDetailViewEvent.cs" />
     <Compile Include="Startup\Bootstrapper.cs" />
@@ -85,6 +86,8 @@
     <Compile Include="View\NavigationView.xaml.cs">
       <DependentUpon>NavigationView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="View\Services\IMessageDialogService.cs" />
+    <Compile Include="View\Services\MessageDialogService.cs" />
     <Compile Include="View\StockDetailView.xaml.cs">
       <DependentUpon>StockDetailView.xaml</DependentUpon>
     </Compile>
