new grids and Bonds

--- a/Stockery.Model/Stockery.Model.csproj
+++ b/Stockery.Model/Stockery.Model.csproj
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="HistoricalStockPriceInfo.cs" />
+    <Compile Include="Bond.cs" />
     <Compile Include="LookUpItem.cs" />
     <Compile Include="Stock.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
