--- a/Stockery/Stockery.UI.csproj
+++ b/Stockery/Stockery.UI.csproj
@@ -68,21 +68,36 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Data\LookUps\IBondLookUpDataService.cs" />
     <Compile Include="Data\LookUps\IStockLookUpDataService.cs" />
+    <Compile Include="Data\LookUps\LookUpBondDataService.cs" />
     <Compile Include="Data\LookUps\LookUpDataService.cs" />
+    <Compile Include="Data\Repositories\BondRepository.cs" />
+    <Compile Include="Data\Repositories\IBondRepository.cs" />
     <Compile Include="Data\Repositories\IStockRepository.cs" />
     <Compile Include="Data\Repositories\StockRepository.cs" />
+    <Compile Include="Event\AfterBondDeletedEvent.cs" />
+    <Compile Include="Event\AfterBondSavedEvent.cs" />
     <Compile Include="Event\AfterStockDeletedEvent.cs" />
     <Compile Include="Event\AfterStockSavedEvent.cs" />
+    <Compile Include="Event\OpenBondDetailViewEvent.cs" />
     <Compile Include="Event\OpenStockDetailViewEvent.cs" />
     <Compile Include="Startup\Bootstrapper.cs" />
+    <Compile Include="ViewModel\BondDetailViewModel.cs" />
+    <Compile Include="ViewModel\IBondDetailViewModel.cs" />
+    <Compile Include="ViewModel\INavigationBondViewModel.cs" />
     <Compile Include="ViewModel\INavigationViewModel.cs" />
     <Compile Include="ViewModel\IStockDetailViewModel.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
+    <Compile Include="ViewModel\NavigationBondViewModel.cs" />
+    <Compile Include="ViewModel\NavigationItemBondViewModel.cs" />
     <Compile Include="ViewModel\NavigationItemViewModel.cs" />
     <Compile Include="ViewModel\NavigationViewModel.cs" />
     <Compile Include="ViewModel\StockDetailViewModel.cs" />
     <Compile Include="ViewModel\ViewModelBase.cs" />
+    <Compile Include="View\NavigationViewBond.xaml.cs">
+      <DependentUpon>NavigationViewBond.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\NavigationView.xaml.cs">
       <DependentUpon>NavigationView.xaml</DependentUpon>
     </Compile>
@@ -91,6 +106,7 @@
     <Compile Include="View\StockDetailView.xaml.cs">
       <DependentUpon>StockDetailView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Wrapper\BondWrapper.cs" />
     <Compile Include="Wrapper\ModelWrapper.cs" />
     <Compile Include="Wrapper\NotifyErrorInfoBase.cs" />
     <Compile Include="Wrapper\StockWrapper.cs" />
@@ -106,6 +122,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="View\NavigationViewBond.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="View\NavigationView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
