Bond and Stock rudimentary

--- a/Stockery/Stockery.UI.csproj
+++ b/Stockery/Stockery.UI.csproj
@@ -103,6 +103,9 @@
     </Compile>
     <Compile Include="View\Services\IMessageDialogService.cs" />
     <Compile Include="View\Services\MessageDialogService.cs" />
+    <Compile Include="View\BondDetailView.xaml.cs">
+      <DependentUpon>BondDetailView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\StockDetailView.xaml.cs">
       <DependentUpon>StockDetailView.xaml</DependentUpon>
     </Compile>
@@ -129,6 +132,10 @@
     <Page Include="View\NavigationView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\BondDetailView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="View\StockDetailView.xaml">
       <SubType>Designer</SubType>
